--- a/2nd typography.html
+++ b/2nd typography.html
@@ -15,4 +15,4 @@
             <ul>
                 <li>Booking of tickets</li>
                 <li> Trip cancellation</li>
-                <li> fare cancellation
+                <li> fare cancellation</li>
