--- a/bootstrap/1st activity.html
+++ b/bootstrap/1st activity.html
@@ -7,5 +7,19 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     </head>
     <body>
-        <div class="jumbotron jumbotron-fluid">MUDASCOM</div>
-        <input type="button" class="btn btn-primary">
+        
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container" style="text-align: center;">
+                <h1 style="color:orange">JUMBOTRON CLASS</h1> 
+                <p>This is a jumbotron class</p>
+            
+        </div>
+        </div>
+        <div class="container bg-success">
+            <p>This is for buttons</p>
+        <button type="button" class="btn btn-primary">Primary</button>
+        <button type="button" class="btn btn-secondary">Secondary</button>
+        <button type="button" class="btn btn-success">Success</button>
+        </div>
+        </body>
+        </html>
