--- a/bootstrap/1st activity.html
+++ b/bootstrap/1st activity.html
@@ -19,7 +19,7 @@
             <p>This is for buttons</p>
         <button type="button" class="btn btn-primary">Primary</button>
         <button type="button" class="btn btn-secondary">Secondary</button>
-        <button type="button" class="btn btn-success">Success</button>
+        <button type="button" class="btn btn-dark">Success</button>
         </div>
         </body>
         </html>
