--- a/bootstrap/ASSIGNMENT.html
+++ b/bootstrap/ASSIGNMENT.html
@@ -5,7 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
         <style>
-            a::hover{color: grey;}
+            a::hover{color: grey;
+            background-color: grey;}
             header nav ul{
                 padding:0px;
                 justify-content: space-between;
@@ -52,9 +53,9 @@
                 <p>Subcribe to our news letter</p>
                 <form>
                     <label>Name</label>
-                    <input type="text" id="name" placeholder="Enter your name"><br><br>
+                    <input type="text" id="text" placeholder="Enter your name"><br><br>
                     <label>Gmail</label>
                     <input type="email" id="email" placeholder="Enter your gmail"><br><br>
-                    <buttton>Submit</buttton> 
+                    <buttton class="btn btn-dark">Submit</buttton> 
             </footer>
             </div>
