--- a/bootstrap/ASSIGNMENT.html
+++ b/bootstrap/ASSIGNMENT.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
         <style>
-            a::hover{color: grey;
+            a:hover{color: grey;
             background-color: grey;}
             header nav ul{
                 padding:0px;
